fix: wrap `.container` responsively

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ img {
 	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
+	flex-wrap: nowrap;
 	max-height: calc(100vh - 88px);
 }
 .container > div {
@@ -87,6 +88,12 @@ header h1 {
 }
 
 @media screen and (min-width: 640px) {
+	.container {
+		flex-direction: row;
+		flex-wrap: wrap;
+		gap: 0 1rem;
+	}
+
 	header {
 		width: 100%;
 	}
